--- a/osca/sidebar.css
+++ b/osca/sidebar.css
@@ -28,7 +28,8 @@
 }
 
 #sidebar-toggler{
-    background-color: blueviolet;
+    background-color: darkblue;
+    color:white;
     position: fixed;
     margin-top: 16em;
     padding: .2rem;
@@ -47,3 +48,48 @@
     transform-origin: top left;
     z-index: 2;
 }
+
+
+#sidebar2{
+    display: none;
+    min-width: 250px;
+    max-width: 250px;
+    min-height: 400px; 
+    /*
+    min-height: 100vh; */
+    /* position:fixed; */
+    position:fixed;
+    background-color: lightgray;
+    z-index: 1;
+    border-right: 2px solid darkblue;
+    border-bottom: 2px solid darkblue;
+    border-top: 2px solid darkblue;
+    border-radius: 3px;
+    opacity: 95%;
+    padding-left:1em;
+}
+sidebar2 > a{
+    color:white;
+}
+
+/*Since the footer is sticky and a higher index give plenty of margin to the bottom so the Next/Previous buttons have room */
+.training-body {
+    margin-bottom: 10em;
+}
+@media only screen and (max-width: 600px) {
+    .training-body {
+       padding-left: 1.5em;
+    }
+ }
+
+ .back-next-container{
+ margin-top: 4em;
+ }
+
+/* this wont work because if the content of the page is below view port it hovers over it
+ .back-next-container{
+    position: absolute;
+    bottom: 30px;
+    border: 3px solid #8AC007;
+ }
+ */
